# tree-sitter-rescript

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  binding.gyp.json  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: build-test.yml  ci.yml
bindings/c/: tree-sitter-rescript.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rescript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterReScript/: rescript.h
bindings/swift/TreeSitterReScriptTests/: TreeSitterReScriptTests.swift
queries/: highlights.scm  indents.scm  injections.scm  textobjects.scm
queries/rescript/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  decorators.txt  error_scopes.txt  expressions.txt  functions.txt  jsx.txt  let_bindings.txt  literals.txt  modules.txt  mutation_statements.txt  statements.txt  type_declarations.txt  type_definitions.txt
test/highlight/: decorators.res  embedded.res  expressions.res  functions.res  jsx.res  literals.res  modules.res  switch.res  type_declarations.res
